<?xml version="1.0" encoding="utf-8"?>
<!--@Reference - https://www.geeksforgeeks.org/user-authentication-and-crud-operation-with-firebase-realtime-database-in-android/-->
<!--Ref description - tutorial on how to create a registration screen -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_shade_1"
    tools:context=".activities.RegistrationActivity">

    <ImageView
        android:id="@+id/idImgLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/application_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILUserName"
        android:layout_below="@+id/idImgLogo"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="1dp"
        android:hint="@string/enter_email"
        style="@style/TextInputLayout"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textColorHint="@color/blue_shade_2"
        app:hintTextColor="@color/blue_shade_2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/blue_shade_2"
            android:textColorHint="@color/blue_shade_2"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTILUserName"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/enter_password"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@color/blue_shade_2"
        app:hintTextColor="@color/blue_shade_2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/blue_shade_2"
            android:textColorHint="@color/blue_shade_2"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/pwdHelpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTILPassword"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="italic"
        android:text="@string/passwords_must_contain_an_uppercase_letter_a_lowercase_letter_a_number_and_a_special_character"
        android:textColor="@android:color/holo_red_dark"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTILCnfPwd"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwdHelpText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/confirm_password"
        style="@style/TextInputLayout"
        android:padding="5dp"
        android:textColorHint="@color/blue_shade_2"
        app:hintTextColor="@color/blue_shade_2">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/idEdtCnfPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/blue_shade_2"
            android:textColorHint="@color/blue_shade_2"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/idBtnRegister"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/idTILCnfPwd"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_back"
        android:text="@string/register"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/idTVLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user_login_here"
        android:textColor="@color/blue_shade_2"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@id/idBtnRegister"
        android:layout_marginTop="20dp"
        android:textSize="18sp" />
    
    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTVLogin"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_back" />

</RelativeLayout>