<resources>
    <string name="app_name">FoodPlannerApp</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_a_user_login_here">Already a User? Login Here</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="enter_recipe_name">Enter Recipe Name</string>
    <string name="enter_recipe_cooking_time">Enter Recipe Cooking Time (Minutes)</string>
    <string name="enter_recipe_link">Enter Recipe Link</string>
    <string name="enter_image_link">Enter Image Link</string>
    <string name="enter_recipe_description">Enter Recipe Description</string>
    <string name="update_recipe">Update \nRecipe</string>
    <string name="delete_recipe">Delete \nRecipe</string>
    <string name="recipe_search">Recipe Search</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="shopping_list">Shopping List</string>
    <string name="edit_account">Edit Account</string>
    <string name="log_out">Log Out</string>
    <string name="enter_cooking_method">Enter Cooking Method</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="description">Description</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="edit_recipe">Edit Recipe</string>
...
    <string name="suitability_search">Suitability Search</string>
    <string name="recipe_details_shopping_list"><![CDATA[Recipe Details & Shopping List]]></string>
    <string name="view_recipe_details">View Recipe Details</string>
    <string name="select_recipe_suitability">Select Recipe Suitability</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="sample">sample</string>
    <string name="my_recipes">My Recipes</string>
    <string name="public_recipes">Public Recipes</string>
    <string name="ingredients_scanner">Ingredients Scanner</string>
    <string name="account_email_address">Account Email Address</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="confirm_new_email">Confirm New Email</string>
    <string name="update_email">Update Email</string>
    <string name="authentication_required">This operation is sensitive and requires recent authentication.\n Please log out and back in again before retrying this request.</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="update_password">Update Password</string>
    <string name="passwords_must_contain_an_uppercase_letter_a_lowercase_letter_a_number_and_a_special_character">Passwords must contain: An uppercase letter, a lowercase letter, a number, and a special character.</string>
    <string name="delete_account">Delete Account</string>
    <string name="select_suitability">Select Suitability</string>
    <string name="application_logo">Application Logo</string>
    <string name="no_recipes_added">No Recipes Added</string>
    <string name="click_the_add_recipe_icon_below_or_the_add_recipe_menu_item_to_add_a_recipe">Click the Add Recipe icon below or the Add Recipe menu item to add a recipe.</string>
    <string name="recipe_book_icon">Recipe Book Icon</string>
    <string name="no_matching_ingredients_found">No matching ingredients found</string>
...
