...
                android:hint="@string/account_email_address"
                style="@style/TextInputLayout"
                android:padding="5dp"
                android:textColorHint="@color/blue_shade_2"
                app:hintTextColor="@color/blue_shade_2" >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idCurrentEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textColor="@color/blue_shade_2"
                    android:textColorHint="@color/blue_shade_2"
...
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/updatePwdLL"
            android:layout_margin="10dp"
            android:id="@+id/deleteAccountLL"
            android:gravity="center"
            android:background="@drawable/custom_border">

            <Button
                android:id="@+id/idBtnDeleteAccount"
                android:layout_width="320dp"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/delete_account"
                android:textAllCaps="false"
...
