...
            android:textColor="@color/blue_shade_2"
            android:textColorHint="@color/blue_shade_2"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/idBtnLogin"
        android:layout_centerHorizontal="true"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/idTILPassword"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button_back"
        android:text="@string/login"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/idTVRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register_here"
        android:textColor="@color/blue_shade_2"
        android:textAllCaps="false"
        android:textAlignment="center"
...
